# MatrixCalculator

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: matrix.hpp  parser.hpp  system.hpp  utility.hpp
src/: main.cpp  matrix.cpp  system.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
